Added more translatable messages